* Added option "full" to export all possible stats in seqstat command
* Replaced Libraw with RT debayering

siril 1.0.1
xx/xx/22

* Added min,max, iif and logical operators in pixelmath
* Added support for 3 channels for direct preview of resulting composition in pixelmath
* Added reporting channel name in FILTER header key during split operation
* Using FILTER keyword value for Pixel Math tool variable name
* Fixed using shift transform for global registration
* Fixed crash when changing image with preview opened
* Fixed date wrongly reported in the FITS header in SER/FITSEQ stacking when filtering out images

siril 1.0.0
03/09/22

* Added ASTRO-TIFF standard
* Fixed memory consumption for all sequence operations
* Fixed settings for sequence export as webm film with VP9 codec
* Removed use of lo/hi cursors and fixed normalization for export
* Fixed load and close commands for scripts in GUI
* Fixed Bayer pattern in SER after extraction
* Fixed registration crash for small images
* Improved main panel separator positioning and keeping it in memory
* Improved speed of FITSEQ detection when scanning sequences
* Improve usability on MacOS
* Reintroduced compatibility with OpenCV 4.2 with disabled features

siril 1.0.0~RC2
12/08/21

* Fixes many crashes
* Minor improvements in plot feature
* Restore HD for macOS application

siril 1.0.0~RC1
11/20/21

* New Pixel Math tool
* New plot tool to visualize and sort sequence based on any registration data field available
* New tilt estimation feature (from GUI or command)
* New SNR estimator in photometry analysis
* New button for quick photometry
* New commands seqcosme and seqcosme_cfa to remove deviant pixels on sequence, using file computed with find_hot
* New command boxselect to specify a selection box with x, y, w and h
* Improved candidates star detection speed and accuracy with a new algorithm
* Reviewed GUI and improved responsiveness
* Saving focal and WCS data in the swap file using undo/redo